--- a/jwell.html
+++ b/jwell.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+<> !!Namaste!! </h1>
     <!-- Navbar -->
     <nav class="flex justify-between sticky top-0 bg-white z-50">
         <div class="flex bg-white">
