--- a/jwell.html
+++ b/jwell.html
@@ -13,7 +13,8 @@
 </head>
 
 <body>
-<> !!Namaste!! </h1>
+<h1> !!Namaste!! </h1>
+<h2>!!World!!</h2>
     <!-- Navbar -->
     <nav class="flex justify-between sticky top-0 bg-white z-50">
         <div class="flex bg-white">
