--- a/jwell.html
+++ b/jwell.html
@@ -15,6 +15,7 @@
 <body>
 <h1> !!Namaste!! </h1>
 <h2>!!World!!</h2>
+<p>P Tag</p>
     <!-- Navbar -->
     <nav class="flex justify-between sticky top-0 bg-white z-50">
         <div class="flex bg-white">
